; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_norm.c_pf_normalize_tcp_cleanup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_norm.c_pf_normalize_tcp_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_state = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i64 }

@pf_state_scrub_pl = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pf_normalize_tcp_cleanup(%struct.pf_state* %0) #0 {
  %2 = alloca %struct.pf_state*, align 8
  store %struct.pf_state* %0, %struct.pf_state** %2, align 8
  %3 = load %struct.pf_state*, %struct.pf_state** %2, align 8
  %4 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.pf_state*, %struct.pf_state** %2, align 8
  %10 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @pool_put(i32* @pf_state_scrub_pl, i64 %12)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load %struct.pf_state*, %struct.pf_state** %2, align 8
  %16 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %14
  %21 = load %struct.pf_state*, %struct.pf_state** %2, align 8
  %22 = getelementptr inbounds %struct.pf_state, %struct.pf_state* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @pool_put(i32* @pf_state_scrub_pl, i64 %24)
  br label %26

26:                                               ; preds = %20, %14
  ret void
}

declare dso_local i32 @pool_put(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
